[gd_scene load_steps=5 format=3 uid="uid://bb0jofv7qunvp"]

[ext_resource type="Texture2D" uid="uid://blqadsms1oxgl" path="res://Art/Mine equipment/1 Icons/Icons_14.png" id="1_wq6lv"]
[ext_resource type="Script" path="res://Scripts/Chests.gd" id="2_fsjc8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x354"]
size = Vector2(200, 163)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trb7i"]
size = Vector2(525, 164)

[node name="Node2D" type="Node2D"]

[node name="Chest_icon" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_wq6lv")

[node name="Mouse_click" type="Area2D" parent="."]
script = ExtResource("2_fsjc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse_click"]
position = Vector2(-1, 15.5)
shape = SubResource("RectangleShape2D_5x354")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5.5, 16)
shape = SubResource("RectangleShape2D_trb7i")

[connection signal="mouse_entered" from="Mouse_click" to="Mouse_click" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_click" to="Mouse_click" method="_on_mouse_exited"]
[connection signal="body_shape_entered" from="Area2D" to="Mouse_click" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="Mouse_click" method="_on_area_2d_body_shape_exited"]
